add  netcat revshell det

--- a/Attack01-ST-DR/03.netcat_reverse_shell.yml
+++ b/Attack01-ST-DR/03.netcat_reverse_shell.yml
@@ -1,30 +1,33 @@
-title: Finding the Netcat Reverse shell access #Title of your rule
-id: 83be679f-9be7-44ef-bf28-2de90c3e416f #Universally Unique Identifier (UUID) Generate one from https://www.uuidgenerator.net
-status: test #stage of your rule testing 
-description: Detect the usage of certutil binary #Details about the detection intensions of the rule.
-author: Bhagavan Bollina #Who wrote the rule.
-date: #When was the rule written.
-modified: #When was it updated
+title: Finding the Netcat Reverse Shell Access
+id: 83be679f-9be7-44ef-bf28-2de90c3e416f
+status: test
+description: Detect the usage of certutil binary
+author: Bhagavan Bollina
+date: 2025-06-01
+modified: 2025-06-01
 logsource:
   product: windows
   service: sysmon
 detection:
   selection1:
-    EventID: 1 #Search identifiers for the detection. Refer to the required fields provided in the task. 
-    Image|endswith: 'nc.exe' #Image path of the process that is being executed
-    CommandLine|contains|all: 
-            - '-e' #Command line arguments that are used to execute the process.
-    Hashes: Value #Hash of the file to be used for detection. This can be SHA256, MD5, or SHA1.
-  selection2:
-    Hashes: 523613A7B9DFA398CBD5EBD2DD0F4F38 #Search identifiers for the detection. Refer to the required fields provided in the task. 
     Image|endswith: 'nc.exe'
-  condition: selection #Action to be taken. Can use condition operators such as OR, AND, NOT, 
-fields: #List of associated fields that are important for the detection
-
-falsepositives: #Any possible false positives that could trigger the rule.
-
-level: medium #Severity level of the detection rule.
-tags: #Associated TTPs from MITRE ATT&CK
-  - attack.credential_access #MITRE Tactic
-  - attack.t1110 #MITRE Technique
-
+    CommandLine|contains|all:
+      - 'nc.exe'
+      - ' -e cmd.exe'
+    EventID: '1'
+  selection2:
+    Hashes|contains:
+      - '523613A7B9DFA398CBD5EBD2DD0F4F38'
+  condition: selection1 or selection2
+fields:
+  - CommandLine
+  - Image
+  - Hashes
+  - ParentImage
+  - User
+falsepositives:
+  - Rare legitimate use of Netcat
+level: medium
+tags:
+  - attack.credential_access
+  - attack.t1110
