--- a/Attack01-ST-DR/rules/04.powerup_enumeration.yml
+++ b/Attack01-ST-DR/rules/04.powerup_enumeration.yml
@@ -1,23 +1,29 @@
-title: #Title of your rule
-id: #Universally Unique Identifier (UUID) Generate one from https://www.uuidgenerator.net
-status: #stage of your rule testing 
-description: #Details about the detection intensions of the rule.
-author: #Who wrote the rule.
-date: #When was the rule written.
-modified: #When was it updated
+title: PowerUp Detection
+id: 6f583ee6-4b62-4e16-bfd6-76ef1ad2a72e
+status: test
+description: Detects the usage of privilege escalation tool PowerUp
+author: Bhagavan Bollina
+date: 2025-06-01
+modified: 2025-06-01
 logsource:
   product: windows
   service: sysmon
 detection:
   selection:
-    FieldName1: Value #Search identifiers for the detection. Refer to the required fields provided in the task. 
-    FieldName2: Value
-  condition: selection #Action to be taken. Can use condition operators such as OR, AND, NOT, 
-fields: #List of associated fields that are important for the detection
-
-falsepositives: #Any possible false positives that could trigger the rule.
-
-level: medium #Severity level of the detection rule.
-tags: #Associated TTPs from MITRE ATT&CK
-  - attack.credential_access #MITRE Tactic
-  - attack.t1110 #MITRE Technique
+    EventID: 1
+    Image|endswith: 'powershell.exe'
+    CommandLine|contains|all:
+      - 'PowerUp.ps1'
+      - 'Invoke-AllChecks'
+  condition: selection
+fields:
+  - CommandLine
+  - Image
+  - ParentImage
+  - User
+falsepositives:
+  - Legitimate pentest or red team simulation activity
+level: medium
+tags:
+  - attack.privilege_escalation
+  - attack.t1087
