--- a/Attack01-ST-DR/rules/05.service_binary_privesc.yml
+++ b/Attack01-ST-DR/rules/05.service_binary_privesc.yml
@@ -1,23 +1,31 @@
-title: #Title of your rule
-id: #Universally Unique Identifier (UUID) Generate one from https://www.uuidgenerator.net
-status: #stage of your rule testing 
-description: #Details about the detection intensions of the rule.
-author: #Who wrote the rule.
-date: #When was the rule written.
-modified: #When was it updated
+title: Detecting Service Binary Abuse
+id: adce05d5-187d-4055-9ce6-5405e95c5602
+status: test
+description: Detecting the service binary privilege escalations
+author: Bhagavan Bollina
+date: 2025-06-01
+modified: 2025-06-01
 logsource:
   product: windows
   service: sysmon
 detection:
   selection:
-    FieldName1: Value #Search identifiers for the detection. Refer to the required fields provided in the task. 
-    FieldName2: Value
-  condition: selection #Action to be taken. Can use condition operators such as OR, AND, NOT, 
-fields: #List of associated fields that are important for the detection
-
-falsepositives: #Any possible false positives that could trigger the rule.
-
-level: medium #Severity level of the detection rule.
-tags: #Associated TTPs from MITRE ATT&CK
-  - attack.credential_access #MITRE Tactic
-  - attack.t1110 #MITRE Technique
+    EventID: 1
+    Image|endswith: 'sc.exe'
+    CommandLine|contains|all:
+      - 'sc.exe'
+      - ' config '
+      - ' binPath= '
+      - ' -e '
+  condition: selection
+fields:
+  - CommandLine
+  - Image
+  - ParentImage
+  - User
+falsepositives:
+  - Legitimate administrator service configuration tasks
+level: medium
+tags:
+  - attack.privilege_escalation
+  - attack.t1543.003
