--- a/Attack01-ST-DR/rules/06.runonce_persistence.yml
+++ b/Attack01-ST-DR/rules/06.runonce_persistence.yml
@@ -1,10 +1,10 @@
-title: Find the persistent threat #Title of your rule
-id: 0c050096-a953-4c3e-8f49-23561274032c #Universally Unique Identifier (UUID) Generate one from https://www.uuidgenerator.net
-status: test #stage of your rule testing 
-description: Detection of RunOnce persistence technique #Details about the detection intensions of the rule.
-author: #Who wrote the rule.
-date: #When was the rule written.
-modified: #When was it updated
+title: Find the Persistent Threat
+id: 0c050096-a953-4c3e-8f49-23561274032c
+status: test
+description: Detection of RunOnce persistence technique
+author: Bhagavan Bollina
+date: 2025-06-01
+modified: 2025-06-01
 logsource:
   product: windows
   service: sysmon
@@ -14,17 +14,20 @@ detection:
     Image|endswith: 'reg.exe'
     CommandLine|contains|all:
       - 'RunOnce'
+      - 'REG_SZ'
       - ' add '
       - ' /v '
       - ' /t '
       - ' /d '
-      - ' /f '
-  condition: selection #Action to be taken. Can use condition operators such as OR, AND, NOT, 
-fields: #List of associated fields that are important for the detection
-
-falsepositives: #Any possible false positives that could trigger the rule.
-
-level: medium #Severity level of the detection rule.
-tags: #Associated TTPs from MITRE ATT&CK
-  - attack.credential_access #MITRE Tactic
-  - attack.t1110 #MITRE Technique
+  condition: selection
+fields:
+  - CommandLine
+  - Image
+  - ParentImage
+  - User
+falsepositives:
+  - Legitimate software installers using RunOnce keys
+level: medium
+tags:
+  - attack.persistence
+  - attack.t1547.001
